# PurpleTeam

./: README.md
environment/: README.md  pyproject.toml
environment/purpleteam/: __main__.py  cli.py  config.py  proxmox.py
environment/vm-prep/windows/: generalize.cmd  pre-sysprep.ps1  unattend.xml
